--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="col-8">
                         <p>Hello, my name is Dustin. I started Project Management in 2014 at a custom tool and die manufacturing company. I received the PMP (Project Management Professional) credential in April 2019, and spent two years consulting for Fortune 500 companies on some of their high priority projects. I have just started my career as a developer, and am now currently enrolled in Eleven Fifty's Web Development Bootcamp. I enjoy problem solving and theoretically saving the world through new ideas. I have a drive to better myself so that I can better the people around me, and I strive to accomplish this each day. 
                         </p>
-                        <p>If you would like, please reach out to me via <a href="https://www.linkedin.com/in/dustin-krontz/" class="linkedIn" id="linkedInAbout" target="blank">LinkedIn</a>, visit my <a href="https://github.com/dtkrontz" class="github" id="linkedInContact" target="blank">GitHub</a>, download my <a href="./assets/Dustin Krontz Resume.pdf" download class="resume" id="linkedInContact" target="blank">Resume</a> or contact me in the section below.</p>
+                        <p>If you would like, please reach out to me via <a href="https://www.linkedin.com/in/dustin-krontz/" class="linkedIn" id="linkedInAbout" target="blank">LinkedIn</a>, visit my <a href="https://github.com/dtkrontz" class="github" id="linkedInContact" target="blank">GitHub</a>, download my <a href="./assets/Dustin Krontz Resume.pdf" download class="resume" id="linkedInContact" target="blank">Resume</a>, or contact me in the section below.</p>
                     </div>
                 </div>
             </div>
