modifying for typescript

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p class="lead">Learning Web Development</p>
                 </div>
                 <div class="col-4">
-                    <p class="lead">Learning JavaScript</p>
+                    <p class="lead">Learning JavaScript & TypeScript</p>
                 </div>
             </div>
             </div>
